k8s/overlays/azure/ser/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridcapa-postgresql
  labels:
    app: gridcapa
    component: postgresql
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gridcapa
        component: postgresql
      annotations:
        "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
    spec:
      priorityClassName: highest-priority
      containers:
        - name: gridcapa-postgresql
          image: docker.io/farao/bitnami-postgresql:14.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              cpu: "500m"
              memory: 10Gi
            requests:
              cpu: "500m"
              memory: 5Gi
          volumeMounts:
            - name: postgresql-data
              mountPath: /bitnami/postgresql
            - name: postgres-init
              subPath: init.sh
              mountPath: /docker-entrypoint-initdb.d/init.sh
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: gridcapa-postgresql-data-storage
        - name: postgres-init
          configMap:
            name: gridcapa-postgresql-configmap
