k8s/overlays/azure/ser/filestash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filestash
  labels:
    app: gridcapa
    component: filestash
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: filestash
  ports:
    - port: 80
      targetPort: 8334
      name: http
      protocol: TCP
